# ChangeLog for virtual/poppler-glib
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/poppler-glib/ChangeLog,v 1.26 2009/12/15 20:00:05 abcd Exp $

  15 Dec 2009; Jonathan Callen <abcd@gentoo.org> poppler-glib-0.10.5.ebuild,
  poppler-glib-0.10.6.ebuild, poppler-glib-0.12.0.ebuild,
  poppler-glib-0.12.1.ebuild:
  QA: Add prefix keywords

*poppler-glib-0.12.1 (18 Oct 2009)

  18 Oct 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-glib-0.12.1.ebuild:
  Bump to 0.12.1

*poppler-glib-0.12.0 (09 Sep 2009)

  09 Sep 2009; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-glib-0.11.0.ebuild, -poppler-glib-0.11.3.ebuild,
  +poppler-glib-0.12.0.ebuild:
  Bump to 0.12.0

*poppler-glib-0.11.3 (22 Aug 2009)

  22 Aug 2009; Peter Alfredsen <loki_val@gentoo.org>
  -poppler-glib-0.11.1.ebuild, +poppler-glib-0.11.3.ebuild:
  Bump for 0.12 RC1

  09 Aug 2009; nixnut <nixnut@gentoo.org> poppler-glib-0.10.7.ebuild:
  ppc stable #272980

  17 Jul 2009; Raúl Porcel <armin76@gentoo.org> poppler-glib-0.10.7.ebuild:
  arm/ia64/sh/sparc stable wrt #272980

  06 Jul 2009; Brent Baude <ranger@gentoo.org> poppler-glib-0.10.7.ebuild:
  Marking poppler-glib-0.10.7 ppc64 stable for bug 272980

*poppler-glib-0.11.1 (19 Jun 2009)

  19 Jun 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-glib-0.11.1.ebuild:
  Bump

  16 Jun 2009; Tobias Klausmann <klausman@gentoo.org>
  poppler-glib-0.10.7.ebuild:
  Stable on alpha, bug #272980

  11 Jun 2009; Markus Meier <maekke@gentoo.org> poppler-glib-0.10.7.ebuild:
  amd64 stable, bug #272980

  11 Jun 2009; Jeroen Roovers <jer@gentoo.org> poppler-glib-0.10.7.ebuild:
  Stable for HPPA (bug #272980).

  11 Jun 2009; Christian Faulhammer <fauli@gentoo.org>
  poppler-glib-0.10.7.ebuild:
  stable x86, bug 272980

*poppler-glib-0.10.7 (17 May 2009)

  17 May 2009; Peter Alfredsen <loki_val@gentoo.org>
  +poppler-glib-0.10.7.ebuild:
  Bump

*poppler-glib-0.11.0 (12 May 2009)
