@@ -1,14 +1,14 @@
-# Copyright 1999-2009 Gentoo Foundation
+# Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/poppler-glib/poppler-glib-0.10.7.ebuild,v 1.8 2009/08/09 12:02:24 nixnut Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/poppler-glib/poppler-glib-0.10.7.ebuild,v 1.9 2010/01/11 11:10:11 ulm Exp $
 
 EAPI=2
 
 DESCRIPTION="Virtual package, includes packages that contain libpoppler-glib.so"
-HOMEPAGE="http://poppler.freedesktop.org/"
+HOMEPAGE=""
 SRC_URI=""
 
-LICENSE="GPL-2"
+LICENSE=""
 SLOT="0"
 KEYWORDS="alpha amd64 arm hppa ia64 ppc ppc64 sh sparc x86 ~x86-fbsd"
 IUSE="+cairo"
